<resources>
    <string name="app_name">RZ Test App</string>
    <string name="with_lib_txt">With Unsplash lib</string>
    <string name="without_lib_txt">Custom UI</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="serach_hint">Search</string>
    <string name="toast_text">Image downloading started, please check notification bar for getting progress status</string>
    <string name="shsare_txt">Share content</string>
    <string name="image_name">image_a.jpg</string>
    <string name="no_result_txt">There are no results, try another search word</string>
    <string name="likes">Likes:</string>
    <string name="views">Views:</string>
    <string name="downloads">Downloads:</string>
    <string name="description">Description</string>
    <string name="download">DOWNLOAD</string>
    <string name="share">SHARE</string>
</resources>